// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<tr
  className="it__quality-profiles__inheritance-current"
>
  <td>
    <div
      style={
        {
          "paddingLeft": 25,
        }
      }
    >
      <ProfileLink
        className="text-middle"
        language="foo"
        name="Foo"
      >
        Foo
      </ProfileLink>
    </div>
  </td>
  <td>
    quality_profile.x_active_rules.4
  </td>
  <td>
    <p>
      quality_profiles.x_overridden_rules.0
    </p>
  </td>
</tr>
`;

exports[`should render correctly 2`] = `
<tr
  className="it__quality-profiles__inheritance-current"
>
  <td>
    <div
      style={
        {
          "paddingLeft": 75,
        }
      }
    >
      <ProfileLink
        className="text-middle"
        language="foo"
        name="Foo"
      >
        Foo
      </ProfileLink>
      <BuiltInQualityProfileBadge
        className="spacer-left"
      />
    </div>
  </td>
  <td>
    quality_profile.x_active_rules.4
  </td>
  <td>
    <p>
      quality_profiles.x_overridden_rules.0
    </p>
  </td>
</tr>
`;

exports[`should render correctly 3`] = `
<tr
  className="it__quality-profiles__inheritance-current"
>
  <td>
    <div
      style={
        {
          "paddingLeft": 25,
        }
      }
    >
      <ProfileLink
        className="text-middle"
        language="foo"
        name="Foo"
      >
        Foo
      </ProfileLink>
      <HelpTooltip
        className="spacer-left"
        overlay="quality_profiles.extends_built_in"
      />
    </div>
  </td>
  <td>
    quality_profile.x_active_rules.4
  </td>
  <td>
    <p>
      quality_profiles.x_overridden_rules.0
    </p>
  </td>
</tr>
`;

exports[`should render correctly 4`] = `
<tr
  className="it__quality-profiles__inheritance-current"
>
  <td>
    <div
      style={
        {
          "paddingLeft": 25,
        }
      }
    >
      <ProfileLink
        className="text-middle"
        language="foo"
        name="Foo"
      >
        Foo
      </ProfileLink>
    </div>
  </td>
  <td>
    quality_profile.x_active_rules.4
  </td>
  <td>
    <p>
      quality_profiles.x_overridden_rules.10
    </p>
  </td>
</tr>
`;
